[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/template_tower.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://media/sfx/Fire_1.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="template_tower" type="Node2D"]
script = ExtResource( 1 )

[node name="hurtbox" type="Area2D" parent="." groups=[
"tower",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 32, 32 )
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="speed_timer" type="Timer" parent="."]
wait_time = 0.3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="input_event" from="hurtbox" to="." method="_on_hurtbox_input_event"]
[connection signal="mouse_entered" from="hurtbox" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="hurtbox" to="." method="_on_Area2D_mouse_exited"]
